test/cases/compile_errors/tab_inside_doc_comment.zig
/// Some doc		comment
export fn entry() void {}

// error
//
// :1:13: error: comment contains invalid byte: '\t'
